native/wdsp/wdsp.h

// from txa.h
enum txaMeterType {
  TXA_MIC_PK,
  TXA_MIC_AV,
  TXA_EQ_PK,
  TXA_EQ_AV,
  TXA_LVLR_PK,
  TXA_LVLR_AV,
  TXA_LVLR_GAIN,
  TXA_CFC_PK,
  TXA_CFC_AV,
  TXA_CFC_GAIN,
  TXA_COMP_PK,
  TXA_COMP_AV,
  TXA_ALC_PK,
  TXA_ALC_AV,
  TXA_ALC_GAIN,
  TXA_OUT_PK,
  TXA_OUT_AV,
  TXA_METERTYPE_LAST
};
extern double GetDetectMaxBin(int disp);
extern void SetCalibration (  int disp,
                              int set_num,
                              int n_points,
                              double (*cal)[dMAX_M + 1]
                           );
//
// Interfaces from calcc.c
//

extern void pscc (int channel, int size, double* tx, double* rx);
extern void psccF (int channel, int size, float *Itxbuff, float *Qtxbuff, float *Irxbuff, float *Qrxbuff, int mox,
                   int solidmox);
extern void PSSaveCorr (int channel, char* filename);
extern void PSRestoreCorr (int channel, char* filename);
extern void SetPSRunCal (int channel, int run);
extern void SetPSMox (int channel, int mox);
extern void GetPSInfo (int channel, int *info);
extern void SetPSControl (int channel, int reset, int mancal, int automode, int turnon);
extern void SetPSLoopDelay (int channel, double delay);
extern void SetPSMoxDelay (int channel, double delay);
extern double SetPSTXDelay (int channel, double delay);
extern void SetPSHWPeak (int channel, double peak);
extern void GetPSMaxTX (int channel, double* maxtx);
extern void GetPSDisp (int channel, double* x, double* ym, double* yc, double* ys, double* xm_cor, double* ym_cor, double* xa_cor, double* ya_cor, int* nsamps_out, int* cpts_out, double* phs_ref_deg_out);
extern void SetPSFeedbackRate (int channel, int rate);
//
// Interfaces from channel.c
//

extern void OpenChannel (int channel, int in_size, int dsp_size, int input_samplerate, int dsp_rate,
                         int output_samplerate,
                         int type, int state, double tdelayup, double tslewup, double tdelaydown, double tslewdown, int bfo);
//
// Interfaces from dexp.c
//

extern void create_dexp (int id, int run_dexp, int size, double* in, double* out, int rate, double dettau,
                         double tattack, double tdecay,
                         double thold, double exp_ratio, double hyst_ratio, double attack_thresh, int nc, int wtype, double lowcut,
                         double highcut,
                         int run_filt, int run_vox, int run_audelay, double audelay, void (__stdcall *pushvox)(int id, int active),
                         int antivox_run, int antivox_size, int antivox_rate, double antivox_gain, double antivox_tau);
extern void SendCBPushDexpVox (int id, void (__stdcall *pushvox)(int id, int active));
extern double GetTXAMeter (int channel, int mt);
//
// Interfaces from version.c
//

extern int GetWDSPVersion(void);
//
// Interfaces from wisdom.c
//

extern char* wisdom_get_status(void);
extern int WDSPwisdom (char* directory);