Zeus.Dsp/Wdsp/NativeMethods.cs


    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double GetDetectMaxBin(int disp);

    // TXA side. Indices per Thetis TXA.h:49-68 txaMeterType — MIC_AV=1,
    // EQ_AV=3, LVLR_AV=5, LVLR_GAIN=6, CFC_AV=8, CFC_GAIN=9, COMP_AV=11,
    // ALC_AV=13, ALC_GAIN=14, OUT_AV=16. Used for per-stage TX diagnostics
    // to localize where the signal is dropping.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double GetTXAMeter(int channel, int mt);

    // FFTW wisdom: builds or loads cached plans from `directory/wdspWisdom01`.
    // Returns 0 if plans were loaded from file (fast), 1 if newly built and
    // saved (slow — FFTW_PATIENT runs sizes 64..262144). Must be called once
    // before the first OpenChannel so FFTW reuses the cached plans instead of
    // re-planning cold on every launch.
    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int WDSPwisdom(string directory);

    // Returns a pointer into a static 128-byte buffer written by the last
    // WDSPwisdom call (e.g. "Wisdom already existed" / "Wisdom created").
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial IntPtr wisdom_get_status();

    // Version of the libwdsp that actually got loaded. native/wdsp/version.c
    // returns version_number * 100 with exactly two digits to the right of the
    // decimal point, so v2.00 reports 200 and v1.14 reports 114. Declared at
    // native/wdsp/wdsp.h:988.
    //
    // Zeus targets WDSP 2.0. Because Zeus Link supplies engine binaries out of
    // band into a self-extracting layout, a stale libwdsp can end up next to a
    // current managed build with no other symptom, so this is the only runtime
    // proof of which DSP engine is in the process. Older libwdsp builds may not
    // export the symbol at all — callers must go through
    // WdspDspEngine.ResolveEngineVersion(), which probes the export first
    // (see Nr4Sbnr / Nr3Rnnr for the same capability-guard pattern) rather than
    // letting an EntryPointNotFoundException escape.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetWDSPVersion();

    // -- PureSignal (predistortion). Lives inside the TXA channel via
    //    create_calcc / create_iqc (TXA.c:405,424). Symbol set verified
    //    against native/wdsp/wdsp.h. The mox/solidmox args to psccF are
    //    documented as ignored — drive MOX state through SetPSMox instead
    //    (calcc.c:846).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSControl(int channel, int reset, int mancal, int automode, int turnon);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSRunCal(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSMox(int channel, int mox);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSFeedbackRate(int channel, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSHWPeak(int channel, double peak);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSMoxDelay(int channel, double delay);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSLoopDelay(int channel, double delay);

    // Returns the actual delay applied (clamped). pihpsdr stores the return.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double SetPSTXDelay(int channel, double delay);

    // info[16]: state-machine snapshot. Caller passes a pinned int[16].
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetPSInfo(int channel, IntPtr info);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetPSMaxTX(int channel, out double maxtx);

    // calcc's display buffers — the AM/AM and AM/PM curves plus the sample
    // cloud they were fitted through (calcc.c:2282).
    //
    // BUFFER SIZES ARE NOT NEGOTIABLE, and getting them wrong corrupts the
    // engine's heap rather than failing: GetPSDisp memcpys disp.nsamps
    // doubles into x/ym/yc/ys BEFORE it reports what nsamps was, and
    // DISP_PTS doubles into the four *_cor buffers. nsamps is the
    // collection size, 16 buckets x 256 = 4096 (calcc.c:339-369), and
    // DISP_PTS is 512 (calcc.c:308). Pass buffers of at least those
    // lengths; see PsCurve.NativeSampleCount / PsCurve.CurvePoints.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static unsafe partial void GetPSDisp(
        int channel,
        double* x, double* ym, double* yc, double* ys,
        double* xmCor, double* ymCor, double* xaCor, double* yaCor,
        int* nsampsOut, int* cptsOut, double* phsRefDegOut);

    // pscc float variant (calcc.c:840). Feed paired TX-modulator IQ + RX
    // feedback IQ. Block size is 1024 complex samples per pihpsdr's
    // receiver.c:636. mox/solidmox are dead args — pass 0/0.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void psccF(int channel, int size,
                                       float[] Itxbuff, float[] Qtxbuff,
                                       float[] Irxbuff, float[] Qrxbuff,
                                       int mox, int solidmox);

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void PSSaveCorr(int channel, string filename);

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void PSRestoreCorr(int channel, string filename);
}
